--- a/QuestionApp1/View/Base.lproj/Main.storyboard
+++ b/QuestionApp1/View/Base.lproj/Main.storyboard
@@ -19,15 +19,21 @@
                                 <rect key="frame" x="87" y="102" width="240" height="245"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="txe-5Y-DLc">
+                            <button opaque="NO" tag="2" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="txe-5Y-DLc">
                                 <rect key="frame" x="239" y="515" width="128" height="128"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" image="batsu"/>
+                                <connections>
+                                    <action selector="answer:" destination="BYZ-38-t0r" eventType="touchUpInside" id="NGD-o2-z58"/>
+                                </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kwz-L3-N0E">
+                            <button opaque="NO" tag="1" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kwz-L3-N0E">
                                 <rect key="frame" x="44" y="515" width="128" height="128"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" image="maru"/>
+                                <connections>
+                                    <action selector="answer:" destination="BYZ-38-t0r" eventType="touchUpInside" id="6Ei-WG-xVP"/>
+                                </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="最高得点" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hRn-dh-VT2">
                                 <rect key="frame" x="54" y="729" width="103" height="62"/>
@@ -49,6 +55,7 @@
                     </view>
                     <connections>
                         <outlet property="imageView" destination="ujo-yt-0vJ" id="tc0-Sq-t2E"/>
+                        <outlet property="maxScoreLabel" destination="8g1-SU-Oo1" id="Mxb-Nx-atR"/>
                         <segue destination="Fbb-pf-UJu" kind="presentation" identifier="next" modalPresentationStyle="fullScreen" id="xWN-c7-7Yw"/>
                     </connections>
                 </viewController>
